Fix a lot of small bugs, should have better cross-browser compatibility now, but it really depends on IE :P. Need to review the processInfo Function (server && script both)

--- a/Web/css/style.less
+++ b/Web/css/style.less
@@ -40,7 +40,6 @@ body{
   height: 100%;
   margin-top: -70px;
   box-sizing: border-box;
-  overflow: hidden;
   padding-top: 70px;
   .transition;
 }
